# Amber

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.txt
Amber/: CMakeLists.txt  main.cpp  main.mm
Amber/Core/: CommandLineOptions.cpp  CommandLineOptions.h  ConsoleCommand.cpp  ConsoleCommand.h  ConsoleManager.cpp  ConsoleManager.h  ConsoleVariable.cpp  ConsoleVariable.h  CoreTypes.h  Defines.h  IConsoleManager.h  Input.cpp  Input.h  Log.cpp  Log.h  Logger.cpp  Logger.h  Macros.h  Paths.cpp  Paths.h  Types.h  Window.cpp  Window.h
Amber/Device/: DeviceHostCommon.h  KernelCompiler.cpp  KernelLauncher.h  OptixPathTracer.cpp  OptixPathTracer.h  OptixUtils.cpp  OptixUtils.h  PathTracer.cpp  PathTracer.h
Amber/Device/BVH/: BVHData.h  Intersection.h  MedianSplitBuilder.h  Primitives.h
Amber/Device/CPU/: AccelerationStructure.cpp  AccelerationStructure.h  BLAS.cpp  BLAS.h  BLASPrimTraits.h  BVH.cpp  BVH.h  CpuBVH.cpp  CpuBVH.h  CpuPathTracer.cpp  CpuPathTracer.h  InstanceSpatialTraits.h  Intersection.h  MedianSplitBuilder.cpp  MedianSplitBuilder.h  PathTracingUtils.h  Primitives.h  RayFlags.h  SAHBuilder.cpp  Sampler.cpp  Sampler.h  TLAS.cpp  TLAS.h  Texture.h
Amber/Device/CPU/BVH/: BVH.cpp  BVH.h  Collapse.h  Intersection.h  MedianSplitBuilder.cpp  MedianSplitBuilder.h  PLOCBuilder.cpp  PLOCBuilder.h  PrimTraits.h  Primitives.h  Refit.h  SAHBuilder.h  SpatialTraits.h  Stats.h  TopDownBuilder.cpp  TopDownBuilder.h  Traversal.h
Amber/Device/Kernels/: Color.cuh  DeviceCommon.cuh  Disney.cuh  Material.cuh  Math.cuh  ONB.cuh  PathTracing.cu  PostProcessing.cu  Random.cuh  Sampling.cuh
Amber/Device/Kernels/Impl/: MathDefines.cuh  MathImpl.cuh
Amber/Device/Metal/: DebugView.metal  MetalDeviceHostCommon.h  MetalPathTracer.cpp  MetalPathTracer.h  MetalPathTracer.mm  MetalUtils.h  MetalUtils.mm  PathTracing.metal  PostProcess.metal
Amber/Device/OptiX/: DeviceHostCommon.h  KernelCompiler.cpp  KernelCompiler.h  OptixPathTracer.cpp  OptixPathTracer.h  OptixUtils.cpp
Amber/Device/OptiX/Kernels/: DeviceTypes.cuh  Disney.cuh  Math.cuh  PRNG.cuh  PathTracing.cu  PostProcessing.cu
Amber/Device/OptiX/Kernels/Impl/: MathDefines.cuh  MathImpl.cuh
Amber/Editor/: Editor.cpp  Editor.h  EditorConsole.cpp  EditorConsole.h  EditorSink.cpp  EditorSink.h  IImGuiManager.h
Amber/Editor/Metal/: MetalImGuiManager.h  MetalImGuiManager.mm
Amber/Editor/SDL/: SDLImGuiManager.cpp  SDLImGuiManager.h  SDLUtil.h
Amber/Math/: MathCommon.h  MathTypes.h
Amber/Optix/: CudaDefines.h  CudaMath.h  CudaUtils.cpp  CudaUtils.h  KernelCompiler.cpp  KernelCompiler.h  OptixPathTracer.cpp  OptixPathTracer.h  OptixRenderer.cpp  OptixRenderer.cu  OptixRenderer.h  OptixShared.h  OptixUtils.cpp  OptixUtils.h  PathTracingKernel.cu
Amber/Optix/Kernels/: Color.cuh  CudaMath.cuh  CudaUtils.cuh  Disney.cuh  Math.cuh  PathTracing.cu  PathTracingKernel.cu  PostProcessing.cu  Random.cuh  Sampling.cuh
Amber/Platform/: Input.h  Window.h
Amber/Platform/Mac/: Input.mm  MetalWindow.h  MetalWindow.mm
Amber/Platform/Windows/: Input.cpp  Window.cpp  Window.h
Amber/Resources/Models/: dds2png.py
Amber/Resources/Models/Interior/: ZetCG_ExhibitionHall.usd
Amber/Resources/Models/Outdoor/: Puddles.mdl  Puddles.usd
Amber/Resources/Models/SanMiguel/: sanmiguel.gltf
Amber/Resources/Models/Sponza/: Sponza.gltf
Amber/Resources/Models/living_room/: living_room.mtl
Amber/Resources/Models/lost_empire/: copyright.txt  lost_empire.mtl
Amber/Resources/Models/salle_de_bain/: salle_de_bain.mtl
Amber/Resources/Scenes/pbrt/simple/: buddha.pbrt  caustic-proj.pbrt  dof-dragons.pbrt  miscquads.pbrt  room-mlt.pbrt  (+6 more)
Amber/Saved/Config/: config.json
Amber/Saved/Ini/: imgui.ini
Amber/Saved/Scenes/: interior_usd.json  living_room.json  outdoor_usd.json  salle_de_bain.json  sanmiguel.json  sponza.json  toyshop.json
Amber/Scene/: Camera.cpp  Camera.h  Light.h  Material.h  Mesh.h  Scene.cpp  Scene.h
Amber/Utilities/: CLIParser.cpp  CLIParser.h  ConcurrentQueue.h  CpuBuffer2D.h  Delegate.h  EnumUtil.h  EnvVars.h  FilesUtil.cpp  FilesUtil.h  ImageUtil.cpp  ImageUtil.h  JsonUtil.h  Random.h  SDLUtil.cpp  SDLUtil.h  Singleton.h  Stack.h  StringUtil.cpp  StringUtil.h  ThreadPool.h  Timer.h
BVHBenchmark/: BVHBenchmark.cpp  CMakeLists.txt
Lavender/: CMakeLists.txt  Lavender.cpp  Lavender.h  main.cpp
Lavender/Core/: ConsoleCommand.cpp  ConsoleCommand.h  ConsoleManager.cpp  ConsoleManager.h  ConsoleVariable.cpp  ConsoleVariable.h  CoreTypes.h  Defines.h  Engine.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Paths.cpp  Paths.h  Window.cpp  Window.h
Lavender/Cuda/: CudaAlloc.cpp  CudaAlloc.h  CudaCore.h  CudaEvent.cpp  CudaEvent.h  CudaKernel.h  CudaMath.h  CudaRand.cu  CudaRand.h  CudaStream.cpp  CudaStream.h  CudaTimer.h  CudaUtil.cpp  CudaUtil.h
Lavender/Editor/: Editor.cpp  Editor.h  EditorConsole.cpp  EditorConsole.h  EditorSink.cpp  EditorSink.h
Lavender/Math/: MathTypes.h
Lavender/Optix/: CudaKernel.h  CudaRenderer.cu  CudaRenderer.h  CudaUtils.cpp  CudaUtils.h  MathUtils.h  OptixRenderer.cpp  OptixRenderer.cu  OptixRenderer.h  OptixShared.h  OptixUtils.cpp  OptixUtils.h
Lavender/Optix/Cuda/: CudaAlloc.cpp  CudaAlloc.h  CudaCore.cpp  CudaEvent.cpp  CudaEvent.h  CudaKernel.h  CudaMath.h  CudaStream.cpp  CudaStream.h
Lavender/PbrtParser/: PbrtFileLocation.h  PbrtLexer.cpp  PbrtLexer.h  PbrtParser.cpp  PbrtParser.h  PbrtToken.cpp  PbrtToken.h  PbrtTokens.def
Lavender/Renderer/: Camera.h  CudaRenderer.cu  CudaRenderer.h  Material.h  Renderer.h  Scene.h
Lavender/Resources/Scenes/: test_scene.pbrt
Lavender/Saved/Config/: config.json
Lavender/Saved/Result/: test.hdr
Lavender/Scene/: Camera.cpp  Camera.h  Filter.h  Light.h  Material.cpp  Material.h  Mesh.h  PinholeCamera.h  Primitive.h  Renderer.cpp  Renderer.cu  Renderer.h  Scene.cpp  Scene.h
Lavender/Utilities/: Buffer2D.h  ConcurrentQueue.h  CpuBuffer2D.h  Delegate.h  EnumUtil.h  FilesUtil.cpp  FilesUtil.h  ImageUtil.cpp  ImageUtil.h  JsonUtil.h  Random.h  SDLUtil.cpp  SDLUtil.h  Singleton.h  StringUtil.cpp  StringUtil.h  ThreadPool.h
(+1 files in other folders)
